# sale-blanket

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
sale_blanket_order/: README.rst  __manifest__.py
sale_blanket_order/i18n/: it.po  sale_blanket_order.pot
sale_blanket_order/models/: blanket_orders.py  sale_orders.py
sale_blanket_order/tests/: test_blanket_orders.py  test_sale_order.py
sale_blanket_order/views/: sale_blanket_order_line_views.xml  sale_blanket_order_views.xml  sale_order_views.xml
sale_blanket_order/wizard/: create_sale_orders.py
sale_order_blanket_order/: README.rst  __manifest__.py  hooks.py
sale_order_blanket_order/data/: ir_cron.xml
sale_order_blanket_order/i18n/: fr.po  it.po  sale_order_blanket_order.pot
sale_order_blanket_order/models/: __init__.py  sale_order.py  sale_order_line.py
sale_order_blanket_order/tests/: __init__.py  common.py  fake_models.py  test_sale_blanket_order.py  test_sale_call_off_order.py  test_sale_normal_order.py  test_sale_order_deliver_remaining_wizard.py  test_strict_packaging.py
sale_order_blanket_order/views/: product_template.xml  res_config_settings.xml  sale_order.xml  sale_order_line.xml
sale_order_blanket_order_carrier_auto_assign/: README.rst  __manifest__.py
sale_order_blanket_order_sale_margin/: README.rst
sale_order_blanket_order_stock_prebook/: README.rst  __manifest__.py
sale_order_blanket_order_stock_prebook_release/: README.rst  __manifest__.py  hooks.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+33 files in other folders)
